fix: tutorial align items middle

--- a/src/app/pages/tutorial/tutorial.component.scss
+++ b/src/app/pages/tutorial/tutorial.component.scss
@@ -1,7 +1,10 @@
 main {
   flex-grow: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   > * {
     display: block;
-    height: 100%;
   }
 }
